# live-voice-agent

./: README.md  README.vi.md  logs.txt  main.py  main_backup.py  pyproject.toml  requirements.txt  server.py
agent/: __init__.py  agent.py  cartesia_tts.py  companion.py
agent/core/: __init__.py  dispatcher.py  tts_service.py
agent/ws/: __init__.py  connection.py  manager.py
core/: core_types.py  dispatcher.py  pipeline.py
plans/: prevent-vad-interruption.md  ws-scale-10k.md
static/: app.js  index.html  vad.js
