[project]
name = "voice-agent-open-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartesia>=2.0.17",
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "openai-agents[litellm,voice]>=0.6.5",
    "sounddevice>=0.5.3",
    "textual>=7.0.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
